set height on home background to prevent background flick on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -311,7 +311,7 @@ background-attachment: fixed;
 background-image: url(../img/bg-sbu-1.jpg);
 display: table;
 width: 100%;
-height: 100%;
+height: 900px;
 min-height: 100%;
 overflow-x: hidden;
 overflow-y: hidden;
@@ -322,6 +322,20 @@ z-index: 1;
 background-size: cover;
 -o-background-size: cover;
 }
+
+@media (min-width:768px) {
+    #home {
+        height: 100%;
+        padding: 0;
+    }
+}
+
+@media screen and (max-width: 991px) {
+    #home {
+        height: 600px;
+    }
+}
+
 .parallax-overlay {
 position: absolute;
 left: 0;
@@ -354,7 +368,7 @@ z-index: 3;
 
 @media handheld, screen and (max-width: 460px){
     .home-inner img{
-        max-width:65%;
+        max-width:55%;
     }
 
     .intro-text{
